crates/weft-snapshots/tests/snapshots/json/example-table.snap
---
source: crates/weft-snapshots/tests/snapshots.rs
description: example-table as json
---
{
  "weft": "0.1",
  "root": {
    "kind": "screen",
    "id": "root",
    "props": {
      "label": "Orders"
    },
    "children": [
      {
        "kind": "table",
        "id": "orders",
        "props": {
          "label": "Recent orders",
          "state": "ready"
        },
        "slots": {
          "empty": [
            {
              "kind": "text",
              "id": "orders-empty",
              "children": [
                "No orders yet."
              ]
            },
            {
              "kind": "button",
              "id": "orders-shop",
              "on": {
                "press": "nav.shop"
              },
              "children": [
                "Start shopping"
              ]
            }
          ]
        },
        "children": [
          {
            "kind": "column",
            "id": "col-id",
            "children": [
              "Order"
            ]
          },
          {
            "kind": "column",
            "id": "col-total",
            "props": {
              "sort": "descending"
            },
            "on": {
              "press": "orders.sort"
            },
            "children": [
              "Total"
            ]
          },
          {
            "kind": "each",
            "id": "order-each",
            "props": {
              "as": "order",
              "in": {
                "bind": "$.orders"
              }
            },
            "children": [
              {
                "kind": "row",
                "id": "order-row",
                "props": {
                  "selected": false
                },
                "children": [
                  {
                    "kind": "cell",
                    "id": "order-id",
                    "children": [
                      {
                        "kind": "text",
                        "id": "order-id-text",
                        "props": {
                          "text": {
                            "bind": "$order.id"
                          }
                        }
                      }
                    ]
                  },
                  {
                    "kind": "cell",
                    "id": "order-total",
                    "children": [
                      {
                        "kind": "text",
                        "id": "order-total-text",
                        "props": {
                          "text": {
                            "bind": "$order.total"
                          }
                        }
                      }
                    ]
                  }
                ]
              }
            ]
          }
        ]
      }
    ]
  }
}
